2006-07-20 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j87-UNSTABLE

 * Change: Splitted Add_URL into "URL" and "from local Server"

 * NEW: Added YAHOO! YUI , AJAX Autocomplete.
	- Use of horde browser class to detect wether Autocomplete is supported.
	- Added CSS
	- Currently only for local paths

 * NEW: Add possibility to define legal pathes for upload from local server.
	If a legal path is defined autocomplete in the upload dialog is used.

 * NEW: js/multiInput.js.php
 
2006-07-20 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j86-UNSTABLE

 * UPS: forget to add rebuild_thumbs.php into SVN with b1-j72.

2006-07-20 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j85-UNSTABLE

 * NEW: Added Browser.php class from the HORDE (http://www.horde.org) framework.
        Credits added in the classes/horde/ folder.

2006-07-13 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j84-UNSTABLE

 * NEW: Added fs_fileIsHidden() to platform functions.

2006-07-12 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j83-UNSTABLE

 * Send_email to new users now default unchecked.

 * Fix: popups/create_user.php were not reloaed correct on Submit

 * Fix: Little warning in setup/init.php

2006-07-11 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j82-UNSTABLE

 * Layout changes. Mostly to make Gallery look better when embedded :)

2006-07-11 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j81-UNSTABLE

 * FIX: Headers were sent after the header were sent ;) in download.php
   Thanks to Kai.

2006-07-10 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j80-UNSTABLE

 * Fix: Acceskey 's' was double on mainpage

 * Fix: Use same icon for slideshow on mainpage and album view.

 * Added view_comment.gif, removed display.gif

 * Fix: Added ecard_form to $safe_to_include array

 * Some CSS adjustments for embedded Gallery.

 Thanks to Kai for all above !

2006-07-10 Jens Tkotz <jens@peino.de> 1.6-svn-b1-j79-UNSTABLE

 * Fix: Translateable errormessage in index.php was showed before langinit.
   Thanks to Kai.

 * Fix: Adjust $safe_to_include array to popups/
